--- a/src/main/resources/config/adotantes-prod.properties
+++ b/src/main/resources/config/adotantes-prod.properties
@@ -3,3 +3,14 @@ spring.data.mongodb.database=petbytes
 
 server.error.include-stacktrace=never
 server.port:8081
+
+eureka.instance.preferIpAdress=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8091/eureka/
+
+management.endpoints.web.exposure.include=*
+
+info.app.name=Adotantes Microservice
+info.app.description=Petbytes Adotantes Application
+info.app.version=0.0.1
