--- a/docker-compose/prod/docker-compose.yaml
+++ b/docker-compose/prod/docker-compose.yaml
@@ -1,7 +1,6 @@
 version: "3.8"
 
 services: 
-
   configserver:
     image: fephs/configserver:latest
     mem_limit: 700m
@@ -9,7 +8,24 @@ services:
       - "8090:8090"
     networks:
       - petbytes
-
+  eurekaserver:
+    image: fephs/eurekaserver:latest
+    mem_limit: 700m
+    ports:
+      - "8091:8091"
+    networks:
+      - petbytes
+    depends_on:
+      - configserver
+    deploy:
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+        window: 120s
+    environment:
+      SPRING_PROFILES_ACTIVE: default
+      SPRING_CONFIG_IMPORT: configserver:http://configserver:8090
   ongs:
     image: fephs/ongs:latest
     mem_limit: 700m
@@ -19,6 +35,7 @@ services:
       - petbytes
     depends_on:
       - configserver
+      - eurekaserver
     deploy:
       restart_policy:
         condition: on-failure
@@ -28,7 +45,7 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: prod
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8090
-
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8091/eureka/
   adotantes:
     image: fephs/adotantes:latest
     mem_limit: 700m
@@ -38,6 +55,7 @@ services:
       - petbytes
     depends_on:
       - configserver
+      - eurekaserver
     deploy:
       restart_policy:
         condition: on-failure
@@ -47,6 +65,6 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: prod
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8090
-
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8091/eureka/
 networks:
   petbytes:
