Add resilience4j properties into adotantes-prod properties.

--- a/src/main/resources/config/adotantes-prod.properties
+++ b/src/main/resources/config/adotantes-prod.properties
@@ -14,3 +14,18 @@ management.endpoints.web.exposure.include=*
 info.app.name=Adotantes Microservice
 info.app.description=Petbytes Adotantes Application
 info.app.version=0.0.1
+
+resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.findPetsByOngIdCircuitBreaker.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.findPetsByOngIdCircuitBreaker.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.findPetsByOngIdCircuitBreaker.waitDurationOpenState=3000
+resilience4j.circuitbreaker.instances.findPetsByOngIdCircuitBreaker.permittedNumberOfCallsInHalfOpenState=2
+
+resilience4j.retry.configs.default.registerHealthIndicator=true
+resilience4j.retry.instances.findPetsByOngIdRetry.maxRetryAttempts=2
+resilience4j.retry.instances.findPetsByOngIdRetry.waitDuration=2000
+
+resilience4j.ratelimiter.configs.default.registerHealthIndicator=true
+resilience4j.ratelimiter.instances.findPetsByOngIdRateLimiter.timeoutDuration=5000
+resilience4j.ratelimiter.instances.findPetsByOngIdRateLimiter.limitRefreshPeriod=5000
+resilience4j.ratelimiter.instances.findPetsByOngIdRateLimiter.limitForPeriod=1
