--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,12 @@ spring.cloud.config.server.native.search-locations=classpath:/config
 
 server.port=8090
 
+spring.sleuth.sampler.percentage=1
+spring.zipkin.baseUrl=http://localhost:9411/
+spring.zipkin.sender.type=rabbit
+spring.zipkin.rabbitmq.queue=zipkin
+spring.zipkin.host=localhost
+spring.zipkin.port=5672
+spring.zipkin.username=guest
+spring.zipkin.password=guest
+
