--- a/src/main/resources/config/eurekaserver.properties
+++ b/src/main/resources/config/eurekaserver.properties
@@ -4,3 +4,12 @@ eureka.instance.hostname=localhost
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+
+spring.sleuth.sampler.percentage=1
+spring.zipkin.baseUrl=http://localhost:9411/
+spring.zipkin.sender.type=rabbit
+spring.zipkin.rabbitmq.queue=zipkin
+spring.zipkin.host=localhost
+spring.zipkin.port=5672
+spring.zipkin.username=guest
+spring.zipkin.password=guest
