--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,10 @@ server.port=8090
 
 spring.sleuth.sampler.percentage=1
 spring.zipkin.baseUrl=http://localhost:9411/
-spring.zipkin.sender.type=rabbit
-spring.zipkin.rabbitmq.queue=zipkin
-spring.zipkin.host=localhost
-spring.zipkin.port=5672
-spring.zipkin.username=guest
-spring.zipkin.password=guest
+# spring.zipkin.sender.type=rabbit
+# spring.zipkin.rabbitmq.queue=zipkin
+# spring.zipkin.host=localhost
+# spring.zipkin.port=5672
+# spring.zipkin.username=guest
+# spring.zipkin.password=guest
 
