--- a/src/main/resources/config/adotantes-prod.properties
+++ b/src/main/resources/config/adotantes-prod.properties
@@ -32,9 +32,9 @@ resilience4j.ratelimiter.instances.findPetsByOngIdRateLimiter.limitForPeriod=1
 
 spring.sleuth.sampler.percentage=1
 spring.zipkin.baseUrl=http://localhost:9411/
-spring.zipkin.sender.type=rabbit
-spring.zipkin.rabbitmq.queue=zipkin
-spring.zipkin.host=localhost
-spring.zipkin.port=5672
-spring.zipkin.username=guest
-spring.zipkin.password=guest
+# spring.zipkin.sender.type=rabbit
+# spring.zipkin.rabbitmq.queue=zipkin
+# spring.zipkin.host=localhost
+# spring.zipkin.port=5672
+# spring.zipkin.username=guest
+# spring.zipkin.password=guest
