Change app properties to local environments.

--- a/src/main/resources/config/ongs-dev.properties
+++ b/src/main/resources/config/ongs-dev.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://petbytes:Y7oiPhKNxaZrhyWk@petbytes.9yf46.mongodb.net/petbytes?retryWrites=true&w=majority
+spring.data.mongodb.uri= ${SPRING_DATA_MONGODB_URI}
 spring.data.mongodb.database=petbytes
 
 server.error.include-stacktrace=never
